--- a/assets/pages/stats.html
+++ b/assets/pages/stats.html
@@ -50,7 +50,7 @@
         </button>
     </header>
     <main >
-        <div class="d-flex justify-content-center alto60 animate__animated animate__zoomInDown" >
+        <div class="container-fluid d-flex justify-content-center alto65 animate__animated animate__zoomInDown" >
             <table>
                 <tbody>
                     <tr>
