--- a/assets/pages/upcoming-events.html
+++ b/assets/pages/upcoming-events.html
@@ -86,101 +86,7 @@
                 <button class="btn btn-dark" type="submit"><i class="fa-solid fa-magnifying-glass fa-rotate-90" style="color: #ffffff;"></i></button>
             </form>
         </div>
-        <div class="d-flex justify-content-center p-2 animate__animated animate__fadeInUpBig">
-            <article class="card bg-black">
-                <div class="margin-card">
-                    <img src="../images/Festival-of-the-collectivities.jpg" class="card-img-top" alt="Festival-of-the-collectivities">
-                </div>
-                <div class="card-body d-flex text-center flex-column padding-card">
-                    <h5 class="card-title text-white fw-bolder" style="height: 4rem;">Festival of the collectivities</h5>
-                    <p class="text-white card-text" style="height: 5rem;">Enjoy your favorite dishes from different countries in a unique event for the whole family.</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <p class="text-white m-0">$5</p>
-                        <a class="btn-card fw-bold" href="./details.html">Ver más...</a>
-                    </div>
-                </div>
-            </article>
-            <article class="card bg-black">
-                <div class="margin-card">
-                    <img src="../images/Jurassic-park.jpg" class="card-img-top" alt="Jurassic-park">
-                </div>
-                <div class="card-body d-flex text-center flex-column padding-card">
-                    <h5 class="card-title text-white fw-bolder" style="height: 3rem;">Jurassic Park</h5>
-                    <p class="text-white card-text" style="height: 5rem;">Let's go to the paleontology museum for an incredible tour to learn about the largest dinosaurs.</p>
-                    <div class="d-flex justify-content-between align-items-center ">
-                        <p class="text-white m-0">$15</p>
-                        <a class="btn-card fw-bold" href="./details.html">Ver más...</a>
-                    </div>
-                </div>
-            </article>
-            <article class="card bg-black">
-                <div class="margin-card">
-                    <img src="../images/Halloween-night.jpg" class="card-img-top" alt="Halloween-night">
-                </div>
-                <div class="card-body d-flex text-center flex-column padding-card">
-                    <h5 class="card-title text-white fw-bolder" style="height: 3rem;">Halloween Night</h5>
-                    <p class="text-white card-text" style="height: 5rem;">Come in your scariest costume character to win amazing prizes.</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <p class="text-white m-0">$12</p>
-                        <a class="btn-card fw-bold" href="./details.html">Ver más...</a>
-                    </div>
-                </div>
-            </article>
-            <article class="card bg-black">
-                <div class="margin-card">
-                    <img src="../images/Metallica-in-concert.jpg" class="card-img-top" alt="Metallica-in-concert">
-                </div>
-                <div class="card-body d-flex text-center flex-column padding-card">
-                    <h5 class="card-title text-white fw-bolder" style="height: 3rem;">Metallica in concert</h5>
-                    <p class="text-white card-text" style="height: 5rem;">The only concert of the most emblematic band in the world.</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <p class="text-white m-0">$150</p>
-                        <a class="btn-card fw-bold" href="./details.html">Ver más...</a>
-                    </div>
-                </div>
-            </article>
-            
-        </div>
-        <div class="d-flex justify-content-center p-2 animate__animated animate__fadeInUpBig">
-            <article class="card bg-black">
-                <div class="margin-card">
-                    <img src="../images/10K-for-life.jpg" class="card-img-top" alt="10K-for-life">
-                </div>
-                <div class="card-body d-flex text-center flex-column padding-card">
-                    <h5 class="card-title text-white fw-bolder" style="height: 3rem;">10k for life</h5>
-                    <p class="text-white card-text" style="height: 5rem;">Come and exercise, improve your health and lifestyle.</p>
-                    <div class="d-flex justify-content-between align-text-center">
-                        <p class="text-white m-0">$3</p>
-                        <a class="btn-card fw-bold" href="./details.html">Ver más...</a>
-                    </div>
-                </div>
-            </article>
-            <article class="card bg-black">
-                <div class="margin-card">
-                    <img src="../images/School-book-fair.jpg" class="card-img-top" alt="School-book-fair">
-                </div>
-                <div class="card-body d-flex text-center flex-column padding-card">
-                    <h5 class="card-title text-white fw-bolder" style="height: 3rem;">School Book Fair</h5>
-                    <p class="text-white card-text" style="height: 5rem;">Bring your unused school book and bring the one you need.</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <p class="text-white m-0">$1</p>
-                        <a class="btn-card fw-bold" href="./details.html">Ver más...</a>
-                    </div>
-                </div>
-            </article>
-            <article class="card bg-black">
-                <div class="margin-card">
-                    <img src="../images/Avengers.jpg" class="card-img-top" alt="Avengers">
-                </div>
-                <div class="card-body d-flex text-center flex-column padding-card">
-                    <h5 class="card-title text-white fw-bolder" style="height: 3rem;">Avengers</h5>
-                    <p class="text-white card-text" style="height: 5rem;">Marvel's Avengers 3d premiere the start of an epic saga with your best superheroes.</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <p class="text-white m-0">$250</p>
-                        <a class="btn-card fw-bold" href="./details.html">Ver más...</a>
-                    </div>
-                </div>
-            </article>
+        <div id="eventos" class="container-fluid d-flex justify-content-center flex-wrap p-3 gap-3 animate__animated animate__fadeInUpBig">
         </div>
     </main>
     <footer class="bg-black d-flex justify-content-around align-items-center p-2 text-white">
@@ -191,6 +97,8 @@
         </div>
         <h1 class="fs-2 m-0">COHORT FS046</h1>
     </footer>
+    <script src="../js/data.js"></script>
+    <script src="../js/upcoming-events.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
