--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -25,29 +25,9 @@
     <header id="carouselExampleFade" class="carousel slide carousel-fade animate__animated animate__fadeIn">
         <div class="carousel-inner d-flex justify-content-center align-items-center alto-carrusel">
             <div class="carousel-item active" style="margin: 0%; width: auto;">
-                <a class="texto-carrusel" href="#">Contact</a>
-            </div>
-            <div class="carousel-item" style="margin: 0%; width: auto;">
-                <a class="texto-carrusel" href="./stats.html">Stats</a>
-            </div>
-            <div class="carousel-item" style="margin: 0%; width: auto;">
-                <a class="texto-carrusel" href="../../index.html">Home</a>
-            </div>
-            <div class="carousel-item" style="margin: 0%; width: auto;">
-                <a class="texto-carrusel" href="./upcoming-events.html">Upcoming Events</a>
-            </div>
-            <div class="carousel-item" style="margin: 0%; width: auto;">
-                <a class="texto-carrusel" href="./past-events.html">Past Events</a>
+                <p class="texto-carrusel m-0">Contact</p>
             </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
     </header>
     <main>
         <div class="d-flex justify-content-around align-items-center alto65 animate__animated animate__zoomInDown">
@@ -61,7 +41,7 @@
                     <input class="escritura" style="padding: 0.2rem;color:black;" type="email" id="email" name="email" required>
                 </div>
                 <div class="contenedor-formulario" >
-                    <label  class="fw-bold" for="mensagge">Mensagge</label>
+                    <label  class="fw-bold" for="mensagge">Message</label>
                     <textarea class="escritura" style="padding: 0.2rem;color:black; max-height: 7rem;min-height: 7rem;" name="mensagge" id="mensagge" cols="30" rows="10" required></textarea>
                 </div>
                 <div class="d-flex justify-content-end">
