--- a/assets/pages/stats.html
+++ b/assets/pages/stats.html
@@ -25,29 +25,9 @@
     <header id="carouselExampleFade" class="carousel slide carousel-fade animate__animated animate__fadeIn">
         <div class="carousel-inner d-flex justify-content-center align-items-center alto-carrusel">
             <div class="carousel-item active" style="margin: 0%; width: auto;">
-                <a class="texto-carrusel" href="#">Stats</a>
-            </div>
-            <div class="carousel-item" style="margin: 0%; width: auto;">
-                <a class="texto-carrusel" href="../../index.html">Home</a>
-            </div>
-            <div class="carousel-item" style="margin: 0%; width: auto;">
-                <a class="texto-carrusel" href="./upcoming-events.html">Upcoming Events</a>
-            </div>
-            <div class="carousel-item" style="margin: 0%; width: auto;">
-                <a class="texto-carrusel" href="./past-events.html">Past Events</a>
-            </div>
-            <div class="carousel-item" style="margin: 0%; width: auto;">
-                <a class="texto-carrusel" href="./contact.html">Contact</a>
+                <p class="texto-carrusel m-0">Stats</p>
             </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
     </header>
     <main >
         <div class="container-fluid d-flex justify-content-center alto65 animate__animated animate__zoomInDown" >
