--- a/assets/pages/details.html
+++ b/assets/pages/details.html
@@ -23,8 +23,8 @@
         </div>
     </nav>
     <main class="main-card d-flex justify-content-center align-items-center">
-        <div class="d-flex justify-content-around align-items-center contenedor-card animate__animated animate__zoomIn">
-            <img src="../images/Festival-of-the-collectivities.jpg" alt="ejemplo">
+        <div class="d-flex justify-content-around align-items-center contenedor-card animate__animated animate__zoomIn" id="detallesDeEvento">
+            <img src="" alt="ejemplo">
             <section class="contenido-card">
                 <h5 class="text-white fw-bolder" style="height: 4rem;">Name</h5>
                 <p class="text-white">Date</p>
@@ -46,5 +46,6 @@
         <h1 class="fs-2 m-0">COHORT FS046</h1>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="../js/details.js"></script>
 </body>
 </html>
