--- a/assets/pages/details.html
+++ b/assets/pages/details.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <nav class="d-flex justify-content-between">
-        <a class="m-2 animate__animated animate__pulse" href=""><img src="../images/logo.png" alt="logo" height="50"></a>
+        <a class="m-2 animate__animated animate__pulse" href="#"><img src="../images/logo.png" alt="logo" height="50"></a>
         <div class="contenedor-boton m-2 animate__animated animate__pulse">
             <a class="header-boton" href="../../index.html">Home</a>
             <a class="header-boton" href="./upcoming-events.html">Upcoming Events</a>
