--- a/assets/pages/past-events.html
+++ b/assets/pages/past-events.html
@@ -23,12 +23,12 @@
         </div>
     </nav>
     <main>
-        <div class="d-flex justify-content-around align-items-center columna animate__animated animate__fadeInLeft">
+        <div class="d-flex justify-content-center align-items-center columna animate__animated animate__fadeInLeft">
             <form class="d-flex p-2 fw-bold columna" action="#" method="get" id="categorias">
                 
             </form>
-            <form class="d-flex" role="search" action="#" method="get">
-                <input class="form-control me-2" type="search" autocomplete="off" id="buscador">
+            <form class="d-flex w-25" role="search" action="#" method="get">
+                <input class="form-control m-2" type="search" autocomplete="off" id="buscador">
             </form>
         </div>
         <div id="eventos" class="container-fluid d-flex justify-content-center flex-wrap p-3 gap-3 animate__animated animate__fadeInUpBig">
