--- a/assets/pages/details.html
+++ b/assets/pages/details.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <nav class="d-flex justify-content-between">
-        <a class="m-2 animate__animated animate__pulse" href=""><img src="../images/logo.png" alt="logo" height="50"></a>
+        <a class="m-2 animate__animated animate__pulse" href="../../index.html"><img src="../images/logo.png" alt="logo" height="50"></a>
         <div class="contenedor-boton m-2 animate__animated animate__pulse">
             <a class="header-boton" href="../../index.html">Home</a>
             <a class="header-boton" href="./upcoming-events.html">Upcoming Events</a>
@@ -23,7 +23,7 @@
         </div>
     </nav>
     <main class="main-card d-flex justify-content-center align-items-center">
-        <div class="card col-6 col-md-10 height1 bg-black rounded-5 animate__animated animate__zoomIn" id="evento-seleccionado">
+        <div class="d-flex justify-content-center card col-10 m-3 height1 bg-black rounded-5 animate__animated animate__zoomIn" id="evento-seleccionado">
         </div>
     </main>
     <footer class="bg-black d-flex justify-content-around align-items-center p-2 text-white">
