--- a/assets/pages/upcoming-events.html
+++ b/assets/pages/upcoming-events.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <nav class="d-flex justify-content-between">
-        <a class="m-2 animate__animated animate__pulse" href=""><img src="../images/logo.png" alt="logo" height="50"></a>
+        <a class="m-2 animate__animated animate__pulse" href="../../index.html"><img src="../images/logo.png" alt="logo" height="50"></a>
         <div class="contenedor-boton m-2 animate__animated animate__pulse">
             <a class="header-boton" href="../../index.html">Home</a>
             <a class="header-boton-active" href="#">Upcoming Events</a>
@@ -23,12 +23,12 @@
         </div>
     </nav>
     <main>
-        <div class="d-flex justify-content-around align-items-center columna animate__animated animate__fadeInLeft">
+        <div class="d-flex justify-content-center align-items-center columna animate__animated animate__fadeInLeft">
             <form class="d-flex p-2 fw-bold columna" action="#" method="get" id="categorias">
                 
             </form>
-            <form class="d-flex" role="search" action="#" method="get">
-                <input class="form-control me-2" type="search" autocomplete="off" id="buscador">
+            <form class="d-flex w-25" role="search" action="#" method="get">
+                <input class="form-control m-2" type="search" autocomplete="off" id="buscador">
             </form>
         </div>
         <div id="eventos" class="container-fluid d-flex justify-content-center flex-wrap p-3 gap-3 animate__animated animate__fadeInUpBig">
