--- a/assets/pages/past-events.html
+++ b/assets/pages/past-events.html
@@ -28,7 +28,7 @@
                 
             </form>
             <form class="d-flex w-25" role="search" action="#" method="get">
-                <input class="form-control m-2" type="search" autocomplete="off" id="buscador">
+                <input class="form-control m-2" type="search" autocomplete="off" placeholder="Buscador" id="buscador">
             </form>
         </div>
         <div id="eventos" class="container-fluid d-flex justify-content-center flex-wrap p-3 gap-3 animate__animated animate__fadeInUpBig">
