--- a/assets/pages/past-events.html
+++ b/assets/pages/past-events.html
@@ -27,7 +27,7 @@
             <form class="d-flex p-2 fw-bold columna" action="#" method="get" id="categorias">
                 
             </form>
-            <form class="d-flex w-25" role="search" action="#" method="get">
+            <form class="d-flex width1" role="search" action="#" method="get">
                 <input class="form-control m-2" type="search" autocomplete="off" placeholder="Buscador" id="buscador">
             </form>
         </div>
