--- a/assets/pages/details.html
+++ b/assets/pages/details.html
@@ -12,7 +12,7 @@
     <title>Details</title>
 </head>
 <body>
-    <nav class="d-flex justify-content-between">
+    <nav class="d-flex justify-content-between animate__animated animate__fadeInDown">
         <a class="m-2 animate__animated animate__pulse" href="../../index.html"><img src="../images/logo.png" alt="logo" height="50"></a>
         <div class="contenedor-boton m-2 animate__animated animate__pulse">
             <a class="header-boton" href="../../index.html">Home</a>
@@ -23,10 +23,10 @@
         </div>
     </nav>
     <main class="main-card d-flex justify-content-center align-items-center">
-        <div class="d-flex justify-content-center card col-10 m-3 height1 bg-black rounded-5 animate__animated animate__zoomIn" id="evento-seleccionado">
+        <div class="d-flex justify-content-center card col-10 m-3 height1 bg-black rounded-5 animate__animated animate__zoomIn animate__slow" id="evento-seleccionado">
         </div>
     </main>
-    <footer class="bg-black d-flex justify-content-around align-items-center p-2 text-white">
+    <footer class="bg-black d-flex justify-content-around align-items-center p-2 text-white animate__animated animate__fadeInUp">
         <div>
             <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram icon"></i></a>
             <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook icon"></i></a>
