--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Home</title>
 </head>
 <body>
-    <nav class="d-flex justify-content-between">
+    <nav class="d-flex justify-content-between animate__animated animate__fadeInDown">
         <a class="m-2 animate__animated animate__pulse" href=""><img src="./assets/images/logo.png" alt="logo" height="50"></a>
         <div class="contenedor-boton m-2 animate__animated animate__pulse">
             <a class="header-boton-active" href="#">Home</a>
@@ -23,7 +23,7 @@
         </div>
     </nav>
     <main>
-        <div class="d-flex justify-content-center align-items-center columna animate__animated animate__fadeInLeft">
+        <div class="d-flex justify-content-center align-items-center columna animate__animated animate__fadeInLeftBig animate__slow">
             <form class="d-flex p-2 fw-bold columna" action="#" method="get" id="categorias">
                 
             </form>
@@ -31,7 +31,7 @@
                 <input class="form-control m-2" type="search" autocomplete="off" placeholder="Buscador" id="buscador">
             </form>
         </div>
-        <div id="eventos" class="container-fluid d-flex justify-content-center flex-wrap p-3 gap-3 animate__animated animate__fadeInUpBig">
+        <div id="eventos" class="container-fluid d-flex justify-content-center flex-wrap p-3 gap-3 animate__animated animate__fadeInUp animate__slow">
         </div>
     </main>
     <footer class="bg-black d-flex justify-content-around align-items-center p-2 text-white">
