--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -12,7 +12,7 @@
     <title>Contact</title>
 </head>
 <body>
-    <nav class="d-flex justify-content-between">
+    <nav class="d-flex justify-content-between animate__animated animate__fadeInDown">
         <a class="m-2 animate__animated animate__pulse" href="../../index.html"><img src="../images/logo.png" alt="logo" height="50"></a>
         <div class="contenedor-boton m-2 animate__animated animate__pulse">
             <a class="header-boton" href="../../index.html">Home</a>
@@ -23,7 +23,7 @@
         </div>
     </nav>
     <main>
-        <div class="d-flex justify-content-around align-items-center alto65 animate__animated animate__zoomInDown">
+        <div class="d-flex justify-content-around align-items-center alto65 animate__animated animate__zoomIn animate__slow">
             <form class="contenedor form-contact" action="#" method="get">
                 <div class="contenedor-formulario">
                     <label  class="fw-bold" for="name">Name:</label>
@@ -43,7 +43,7 @@
             </form>
         </div>
     </main>
-    <footer class="bg-black d-flex justify-content-around align-items-center p-2 text-white">
+    <footer class="bg-black d-flex justify-content-around align-items-center p-2 text-white animate__animated animate__fadeInUp">
         <div>
             <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram icon"></i></a>
             <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook icon"></i></a>
