--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </nav>
     <main>
         <div class="d-flex justify-content-center align-items-center columna animate__animated animate__fadeInLeftBig animate__slow">
-            <form class="d-flex p-2 fw-bold columna" action="#" method="get" id="categorias">
+            <form class="d-flex p-2 fw-bold columna checkbox-categoria" action="#" method="get" id="categorias">
                 
             </form>
             <form class="d-flex width1" role="search" action="#" method="get">
