--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     </nav>
     <main>
         <div class="d-flex justify-content-center align-items-center columna animate__animated animate__fadeInLeftBig animate__slow">
-            <form class="d-flex p-2 fw-bold columna checkbox-categoria" action="#" method="get" id="categorias">
+            <form class="d-flex p-2 fw-bold columna checkbox-categoria" action="#" method="get" id="contenedorCategorias">
                 
             </form>
             <form class="d-flex width1" role="search" action="#" method="get">
-                <input class="form-control m-2" type="search" autocomplete="off" placeholder="Buscador" id="buscador">
+                <input class="form-control m-2" type="search" autocomplete="off" placeholder="Search" id="buscador">
             </form>
         </div>
         <div id="eventos" class="container-fluid d-flex justify-content-center flex-wrap p-3 gap-3 animate__animated animate__fadeInUp animate__slow">
