--- a/assets/pages/past-events.html
+++ b/assets/pages/past-events.html
@@ -31,7 +31,7 @@
                 <input class="form-control m-2" type="search" autocomplete="off" placeholder="Search" id="buscador">
             </form>
         </div>
-        <div id="eventos" class="container-fluid d-flex justify-content-center flex-wrap p-3 gap-3 animate__animated animate__fadeInUp animate__slow">
+        <div id="eventosPasados" class="container-fluid d-flex justify-content-center flex-wrap p-3 gap-3 animate__animated animate__fadeInUp animate__slow">
         </div>
     </main>
     <footer class="bg-black d-flex justify-content-around align-items-center p-2 text-white">
