--- a/assets/pages/stats.html
+++ b/assets/pages/stats.html
@@ -23,84 +23,8 @@
         </div>
     </nav>
     <main >
-        <div class="container-fluid d-flex justify-content-center alto65 animate__animated animate__zoomIn animate__slow" >
-            <table>
-                <tbody>
-                    <tr>
-                        <th colspan="3">Events statistics</th>
-                    </tr>
-                    <tr>
-                        <td>Events with the highest percentage of attendance</td>
-                        <td>Events with the lowest percentage of attendance</td>
-                        <td>Events with larger capacity</td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                </tbody>
-                <tbody>
-                    <tr>
-                        <th colspan="3">Upcoming events statistics by category</th>
-                    </tr>
-                    <tr>
-                        <td>Categories</td>
-                        <td>Revenues</td>
-                        <td>Percentage of attendance</td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                </tbody>
-                <tbody>
-                    <tr>
-                        <th colspan="3">Past events statistics by category</th>
-                    </tr>
-                    <tr>
-                        <td>Categories</td>
-                        <td>Revenues</td>
-                        <td>Percentage of attendance</td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="container-fluid d-flex justify-content-center alto65 animate__animated animate__zoomIn animate__slow" id="tabla">
+            
         </div>
     </main>
     <footer class="bg-black d-flex justify-content-around align-items-center p-2 text-white animate__animated animate__fadeInUp">
@@ -111,6 +35,8 @@
         </div>
         <h1 class="fs-2 m-0">COHORT FS046</h1>
     </footer>
+    <script src="../js/data.js"></script>
+    <script src="../js/stats.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
