--- a/assets/pages/upcoming-events.html
+++ b/assets/pages/upcoming-events.html
@@ -43,7 +43,7 @@
         <h1 class="fs-2 m-0">COHORT FS046</h1>
     </footer>
     <script src="../js/data.js"></script>
-    <script src="../js/upcoming-events.js"></script>
+    <script type="module" src="../js/upcoming-events.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
