--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -27,15 +27,15 @@
             <form class="contenedor form-contact" action="#" method="get">
                 <div class="contenedor-formulario">
                     <label  class="fw-bold" for="name">Name:</label>
-                    <input class="escritura" style="padding: 0.2rem;color:black;" type="text" id="name" name="name" required>
+                    <input autocomplete="off" class="escritura" style="padding: 0.2rem;color:black;" type="text" id="name" name="name" required>
                 </div>
                 <div class="contenedor-formulario">
                     <label  class="fw-bold" for="email">Email:</label>
-                    <input class="escritura" style="padding: 0.2rem;color:black;" type="email" id="email" name="email" required>
+                    <input autocomplete="off" class="escritura" style="padding: 0.2rem;color:black;" type="email" id="email" name="email" required>
                 </div>
                 <div class="contenedor-formulario" >
                     <label  class="fw-bold" for="mensagge">Message</label>
-                    <textarea class="escritura" style="padding: 0.2rem;color:black; max-height: 7rem;min-height: 7rem;" name="mensagge" id="mensagge" cols="30" rows="10" required></textarea>
+                    <textarea autocomplete="off" class="escritura" style="padding: 0.2rem;color:black; max-height: 7rem;min-height: 7rem;" name="mensagge" id="mensagge" cols="30" rows="10" required></textarea>
                 </div>
                 <div class="d-flex justify-content-end">
                     <input class="boton-enviar " type="submit" value="Send">
