--- a/assets/pages/upcoming-events.html
+++ b/assets/pages/upcoming-events.html
@@ -31,7 +31,7 @@
                 <input class="form-control m-2" type="search" autocomplete="off" placeholder="Search" id="buscador">
             </form>
         </div>
-        <div id="eventos" class="container-fluid d-flex justify-content-center flex-wrap p-3 gap-3 animate__animated animate__fadeInUp animate__slow">
+        <div id="eventosFuturos" class="container-fluid d-flex justify-content-center flex-wrap p-3 gap-3 animate__animated animate__fadeInUp animate__slow">
         </div>
     </main>
     <footer class="bg-black d-flex justify-content-around align-items-center p-2 text-white">
@@ -42,7 +42,6 @@
         </div>
         <h1 class="fs-2 m-0">COHORT FS046</h1>
     </footer>
-    <script src="../js/data.js"></script>
     <script type="module" src="../js/upcoming-events.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
