--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
             <form class="d-flex p-2 fw-bold columna checkbox-categoria" action="#" method="get" id="contenedorCategorias">
                 
             </form>
-            <form class="d-flex width1" role="search" action="#" method="get">
-                <input class="form-control m-2" type="search" autocomplete="off" placeholder="Search" id="buscador">
+            <form class="d-flex width1 btn-buscar" role="search" action="#" method="get">
+                <input class="form-control m-2 input-buscar" type="search" autocomplete="off" placeholder="Search" id="buscador">
             </form>
         </div>
         <div id="eventos" class="container-fluid d-flex justify-content-center flex-wrap p-3 gap-3 animate__animated animate__fadeInUp animate__slow">
         </div>
     </main>
-    <footer class="bg-black d-flex justify-content-around align-items-center p-2 text-white">
+    <footer class="bg-black d-flex justify-content-around align-items-center p-2 text-white animate__animated animate__fadeInUp">
         <div>
             <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram icon"></i></a>
             <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook icon"></i></a>
