--- a/assets/pages/stats.html
+++ b/assets/pages/stats.html
@@ -23,8 +23,7 @@
         </div>
     </nav>
     <main >
-        <div class="container-fluid d-flex justify-content-center alto65 animate__animated animate__zoomIn animate__slow" id="tabla">
-            
+        <div class="container-fluid d-flex justify-content-center alto65 animate__animated animate__fadeInUp animate__slow" id="tabla">
         </div>
     </main>
     <footer class="bg-black d-flex justify-content-around align-items-center p-2 text-white animate__animated animate__fadeInUp">
