--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <nav class="d-flex justify-content-between animate__animated animate__fadeInDown">
-        <a class="m-2 animate__animated animate__pulse" href="../../index.html"><img src="../images/logo.png" alt="logo" height="50"></a>
+        <a class="m-2" href="../../index.html"><img src="../images/logo.png" class="logo" alt="logo" height="50"></a>
         <div class="contenedor-boton m-2 animate__animated animate__pulse">
             <a class="header-boton" href="../../index.html">Home</a>
             <a class="header-boton" href="./upcoming-events.html">Upcoming Events</a>
@@ -24,21 +24,22 @@
     </nav>
     <main>
         <div class="d-flex justify-content-around align-items-center alto65 animate__animated animate__zoomIn animate__slow">
-            <form class="contenedor form-contact" action="#" method="get">
+            <div id="mensaje" style="display: none;"></div>
+            <form class="contenedor form-contact" action="#" method="get" id="contactForm">
                 <div class="contenedor-formulario">
                     <label  class="fw-bold" for="name">Name:</label>
-                    <input autocomplete="off" class="escritura" style="padding: 0.2rem;color:black;" type="text" id="name" name="name" required>
+                    <input autocomplete="off" class="escritura" style="padding: 0.2rem;color:black;" type="text" id="name">
                 </div>
                 <div class="contenedor-formulario">
                     <label  class="fw-bold" for="email">Email:</label>
-                    <input autocomplete="off" class="escritura" style="padding: 0.2rem;color:black;" type="email" id="email" name="email" required>
+                    <input autocomplete="off" class="escritura" style="padding: 0.2rem;color:black;" type="email" id="email" >
                 </div>
                 <div class="contenedor-formulario" >
                     <label  class="fw-bold" for="mensagge">Message</label>
-                    <textarea autocomplete="off" class="escritura" style="padding: 0.2rem;color:black; max-height: 7rem;min-height: 7rem;" name="mensagge" id="mensagge" cols="30" rows="10" required></textarea>
+                    <textarea autocomplete="off" class="escritura" style="padding: 0.2rem;color:black; max-height: 7rem;min-height: 7rem;" id="mensagge" cols="30" rows="10" ></textarea>
                 </div>
                 <div class="d-flex justify-content-end">
-                    <input class="boton-enviar " type="submit" value="Send">
+                    <input class="boton-enviar fw-bold" type="submit" value="Send">
                 </div>
             </form>
         </div>
