--- a/assets/pages/past-events.html
+++ b/assets/pages/past-events.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <nav class="d-flex justify-content-between animate__animated animate__fadeInDown">
-        <a class="m-2 animate__animated animate__pulse" href="../../index.html"><img src="../images/logo.png" alt="logo" height="50"></a>
+        <a class="m-2" href="../../index.html"><img src="../images/logo.png" class="logo" alt="logo" height="50"></a>
         <div class="contenedor-boton m-2 animate__animated animate__pulse">
             <a class="header-boton" href="../../index.html">Home</a>
             <a class="header-boton" href="./upcoming-events.html">Upcoming Events</a>
@@ -39,7 +39,7 @@
             <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook icon"></i></a>
             <a href="https://web.whatsapp.com/" target="_blank"><i class="fa-brands fa-whatsapp icon"></i></a>
         </div>
-        <h1 class="fs-2 m-0">COHORT FS046</h1>
+        <h1 class="fs-2 m-2">COHORT FS046</h1>
     </footer>
     <script type="module" src="../js/past-events.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
