--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
     <nav class="d-flex justify-content-between animate__animated animate__fadeInDown">
-        <a class="m-2 animate__animated animate__pulse" href=""><img src="./assets/images/logo.png" alt="logo" height="50"></a>
-        <div class="contenedor-boton m-2 animate__animated animate__pulse">
+        <a class="m-2" href="#"><img src="./assets/images/logo.png" class="logo" alt="logo" height="50"></a>
+        <div class="contenedor-boton m-2">
             <a class="header-boton-active" href="#">Home</a>
             <a class="header-boton" href="./assets/pages/upcoming-events.html">Upcoming Events</a>
             <a class="header-boton" href="./assets/pages/past-events.html">Past Events</a>
@@ -40,7 +40,7 @@
             <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook icon"></i></a>
             <a href="https://web.whatsapp.com/" target="_blank"><i class="fa-brands fa-whatsapp icon"></i></a>
         </div>
-        <h1 class="fs-2 m-0">COHORT FS046</h1>
+        <h1 class="fs-2 m-2">COHORT FS046</h1>
     </footer>
     <script type="module" src="./assets/js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
