--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -28,15 +28,15 @@
             <form class="contenedor form-contact" action="#" method="get" id="contactForm">
                 <div class="contenedor-formulario">
                     <label  class="fw-bold" for="name">Name:</label>
-                    <input autocomplete="off" class="escritura" style="padding: 0.2rem;color:black;" type="text" id="name">
+                    <input autocomplete="off" class="rounded-3 escritura" style="padding: 0.2rem;color:black;" type="text" id="name">
                 </div>
                 <div class="contenedor-formulario">
                     <label  class="fw-bold" for="email">Email:</label>
-                    <input autocomplete="off" class="escritura" style="padding: 0.2rem;color:black;" type="email" id="email" >
+                    <input autocomplete="off" class="rounded-3 escritura" style="padding: 0.2rem;color:black;" type="email" id="email">
                 </div>
                 <div class="contenedor-formulario" >
                     <label  class="fw-bold" for="mensagge">Message</label>
-                    <textarea autocomplete="off" class="escritura" style="padding: 0.2rem;color:black; max-height: 7rem;min-height: 7rem;" id="mensagge" cols="30" rows="10" ></textarea>
+                    <textarea autocomplete="off" class="rounded-3 escritura" style="padding: 0.2rem;color:black; max-height: 7rem;min-height: 7rem;" id="mensagge" cols="30" rows="10" required></textarea>
                 </div>
                 <div class="d-flex justify-content-end">
                     <input class="boton-enviar fw-bold" type="submit" value="Send">
@@ -52,6 +52,7 @@
         </div>
         <h1 class="fs-2 m-0">COHORT FS046</h1>
     </footer>
+    <script src="../js/contact.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
