--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -27,15 +27,15 @@
             <form class="contenedor form-contact" action="#" method="get">
                 <div class="contenedor-formulario">
                     <label  class="fw-bold" for="name">Name:</label>
-                    <input autocomplete="off" class="rounded-3 escritura contact-nombre" type="text">
+                    <input autocomplete="off" class="rounded-3 escritura contact-nombre" type="text" id="name">
                 </div>
                 <div class="contenedor-formulario">
                     <label  class="fw-bold" for="email">Email:</label>
-                    <input autocomplete="off" class="rounded-3 escritura contact-email" type="email">
+                    <input autocomplete="off" class="rounded-3 escritura contact-email" type="email" id="email">
                 </div>
                 <div class="contenedor-formulario" >
                     <label  class="fw-bold" for="mensagge">Message</label>
-                    <textarea autocomplete="off" class="rounded-3 escritura contact-mensaje" cols="30" rows="10" required></textarea>
+                    <textarea autocomplete="off" class="rounded-3 escritura contact-mensaje" cols="30" rows="10" id="mensagge" required></textarea>
                 </div>
                 <div class="d-flex justify-content-center">
                     <input class="boton-enviar fw-bold" type="submit" value="Send" id="enviar">
